--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <button class="todo-button" type="submit" onclick="onTaskSubmit(event)">
                     <i class="fa-solid fa-square-plus"></i>
                 </button>
+                <select name="Filter" id="filter">
+                    opt
+                </select>
             </form>
             <div class="todo-container">
                 <ul class="todo-list">
