overhall JS file

--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
     </body>
 </html>
 
-<!-- <select name="" id="">
-    <option value="todo">To do (à faire)</option>
-    <option value="doing">To do (à faire)</option>
-    <option value="done" onselect="completion ()">Done (fait)</option>
-</select> -->
+<!-- <div>
+    <select name="" id="">
+        <option value="todo">To do (à faire)</option>
+        <option value="doing">To do (à faire)</option>
+        <option value="done">Done (fait)</option>
+    </select>
+</div> -->
