delete function corrected

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button class="todo-button" type="submit" onclick="onTaskSubmit(event)">
                     <i class="fa-solid fa-square-plus"></i>
                 </button>
-                <select name="Filter" id="filter">
+                <select name="Filter" id="filter-${i}">
                     <option value="">Filters</option>
                     <option value="Priority">Priority</option>
                     <option value="To do">To do</option>
