--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         </select>
       </form>
       <div class="todo-container">
-        <ul class="todo-list"></ul>
+        <ul class="todo-list">
+
+        </ul>
       </div>
     </main>
     <script src="./index.js"></script>
